# Learning

./: .gitignore  README.md  coverage.xml  pyproject.toml
src/homework/: decorators.py  external_api.py  generators.py  loader.py  logger.py  main.py  masks.py  processing.py  utils.py  widjet.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_loader.py  test_masks.py  test_processing.py  test_utils.py  test_widjet.py
