[project]
name = "homework"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "homework", from = "src"}]


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
mypy = "^1.16.1"
black = "^25.1.0"
isort = "^6.0.1"



[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.black]
line-length = 119
exclude = '''(
    /(
        \.git
  )
)'''


[tool.isort]
line_length = 119


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '.venv'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
